welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: '(' expected but identifier found.
  for compt(k<-1 to x) {
      ^Array1:26: error: '(' expected but identifier found.
  for compt(e<-1 to x) {
      ^Array1:30: error: illegal start of simple expression
}
^